# gpuRIR

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MANIFEST.in  Makefile  README.md  cmake_install.cmake  pyproject.toml  setup.py
examples/: example.py  mono_filters.py  polar_plots.py  simulate_trajectory.py  stereo_filters.py  time_vs_T60.py  time_vs_nbRIRs.py
examples/extensions/: mono_filters.py
gpuRIR/: __init__.py
gpuRIR/extensions/: README.md  create_spectrogram.py  directivity_test.py  filtering.py  generate_IR.py  generate_RIR.py  room_parameters.py
gpuRIR/extensions/filters/: air_absorption_bandpass.py  air_absorption_calculation.py  air_absorption_stft.py  butterworth.py  characteristic_filter.py  characteristic_models.py  filter.py  hrtf_filter.py  linear_filter.py
gpuRIR/extensions/hrtf/: hrtf_binaural_receiver.py  hrtf_rir.py
gpuRIR/extensions/hrtf/cipic_hrir/: cipic_copyright.txt
gpuRIR/extensions/test/: test_binaural_receiver.py  test_hrtf.py
gpuRIR/extensions/wall_absorption/: freq_dep_abs_coeff.py  materials.py
scripts/: README.md  air_absorption.py  air_absorption_bandpass.py  air_absorption_stft.py  create_spectrogram.py  directivity_test.py  filter.py  freq_dep_abs_coeff.py  generate_IR_file.py  generate_IR_with_air_STFT.py  generate_IR_with_air_abs.py  generate_IR_with_air_abs_bandsplitting.py  generate_IR_with_filters.py  generate_IR_with_freqdep_recv.py  generate_IR_with_hrtf.py  generate_IR_with_rcv_characteristic.py  generate_IR_with_src_characteristic.py  generate_RIR.py  generate_white_noise.py  hrtf_experiment.py  lf.py  linear_filter.py  polar_plot.py  polar_plot_new.py  polar_plot_old.py  room_parameters.py
scripts/filters/: air_absorption_bandpass.py  air_absorption_stft.py  characteristic_filter.py  hrtf_filter.py  linear_filter.py  materials.py
scripts/hrtf/: hrtf_rir.py
scripts/hrtf/cipic_hrir/: hrir_final.mat
scripts/test/: test_hrtf.py
scripts/wall_absorption/: freq_dep_abs_coeff.py  materials.py
src/: gpuRIR_cuda.cu  gpuRIR_cuda.h  python_bind.cpp
